force-app/main/default/objects/Candidatee__c/Candidatee__c.object-meta.xml
<CustomObject>
    <label>Candidatee</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Candidatee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidatee</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>