force-app/main/default/objects/Candidatee__c/fields/Offer_Letter_Released__c.field-meta.xml
<CustomField>
    <fullName>Offer_Letter_Released__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offer Letter Released</label>
    <type>Checkbox</type>
</CustomField>