force-app/main/default/objects/Candidatee__c/fields/Total_Experience__c.field-meta.xml
<CustomField>
    <fullName>Total_Experience__c</fullName>
    <label>Total Experience</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>